--- a/Atv3_css/style.css
+++ b/Atv3_css/style.css
@@ -3,38 +3,45 @@ img {
     border-width: 2px;
     border-style: dashed;
     border-radius: 50%;
-    
+    margin: 100px 100px 100px 100px;
+
 }
 
-th{
+th {
     color: rgb(8, 16, 160);
     border-color: rgb(114, 2, 252);
     border-width: 5px;
     border-style: solid;
-    border-radius: 50;
     background-color: aqua;
+    
 }
 
-td{
+td {
     color: rgb(8, 16, 160);
-    border-color: rgb(114, 2, 252);;
+    border-color: rgb(114, 2, 252);
     border-width: 5px;
     border-style: solid;
-    border-radius: 50;
     background-color: rgb(1, 82, 82);
 }
-a{
+
+a {
     color: rgb(8, 16, 160);
 }
-ul{
-     border-color: rgb(114, 2, 252);;
+
+ul {
+    border-color: rgb(114, 2, 252);
     border-width: 5px;
     border-style: solid;
-    border-radius: 50;
 }
-table{
-    border-color: rgb(114, 2, 252);;
+
+table {
+    border-color: rgb(114, 2, 252);
     border-width: 5px;
     border-style: solid;
-    border-radius: 50;
+}
+div{
+    border-color: rgb(114, 2, 252);
+    border-width: 5px;
+    border-style: solid;
+    background-color: rgb(1, 82, 82);
 }
