--- a/Atv3_css/style.css
+++ b/Atv3_css/style.css
@@ -45,3 +45,25 @@ div{
     border-style: solid;
     background-color: rgb(1, 82, 82);
 }
+
+header{
+    width: 1500px;
+    height: 250px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: white;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+}
+.header{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+
+}
+.img_class{
+    
+}
