--- a/Atv7.css/style.css
+++ b/Atv7.css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 img {
     border-color: rgb(255, 255, 255);
     border-width: 2px;
@@ -8,6 +10,7 @@ img {
 }
 
 th {
+    font-family: 'Josefin Sans', sans-serif;
     color: rgb(0, 0, 0);
     border-color: rgb(0, 0, 0);
     border-width: 5px;
@@ -17,6 +20,7 @@ th {
 }
 
 td {
+    font-family: 'Josefin Sans', sans-serif;
     color: rgb(255, 255, 255);
     border-color: rgb(0, 0, 0);
     border-width: 5px;
@@ -27,6 +31,7 @@ td {
 a {
     color: rgb(255, 255, 255);
     font-size: larger;
+    font-family: 'Dancing Script', sans-serif;
 }
 
 ul {
@@ -39,6 +44,8 @@ table {
     border-color: rgba(112, 2, 2, 0.82);
     border-width: 5px;
     border-style: solid;
+    
+    
 }
 div{
     border-color: rgb(0, 0, 0);
@@ -48,6 +55,7 @@ div{
 }
 
 header{
+    font-family: 'Josefin Sans', sans-serif;
     border-radius: 20px;
     width: 1500px;
     height: 250px;
@@ -70,4 +78,5 @@ header{
     width: 150px;
     height: 150px;
     margin: 0px;
+
 }
