--- a/desafio/style.css
+++ b/desafio/style.css
@@ -1,14 +1,20 @@
 header {
-    border-radius: 20px;
-    width: 3000px;
-    height: 120px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    background-color: red;
-    position: fixed;
-    z-index: 1;
-    top: 0;
+height: 80px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+flex-direction: row;
+position: fixed;
+z-index: 1;
+top: 0;
+background-color:#ec1c24;
+}
+
+.imgheader{
+width: 160px;
+height: 160px;
+margin: 5px;
+padding-right: 1140px;
 }
 
 .header {
@@ -21,39 +27,53 @@ header {
 
 .banner{
     background-image:url(./imagens/imagem-fundo-banner.jpg);
-    height: 768px;
+    height: 1000px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
-
+.texto-banner{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 h1{
     color: rgb(255, 255, 255);
+    margin-top: 300px;
+    margin-left: 100px;
+    font-size: 400%;
 }
-
+.container-grid{
+    display: flex;
+    flex-direction: column;
+}
 h2{
     color: rgb(255, 0, 0);
-    display: flex;
-    justify-content: left;
-    flex-direction: row;
-    align-items: left;
     border-width: 150px;
+    margin-left: 100px;
+    padding: 0px 150px 0px 150px;
+}
+.titulo-senai{
+    font-size: 200%;
+}
+
+.conteudo-sobre{
+    display: flex;
+    flex-direction: row;
+    padding: auto;
+    padding: 0px 150px 0px 150px;
 }
 
 .button{
-    color: rgb(255, 255, 255);
+    color: rgb(255, 0, 0);
     display: flex;
     flex-direction: row;
-    background-color: red;
+    background-color: rgb(255, 0, 0);
     justify-content: center;
     padding: 30px;
 }
-.imgheader{
-    width: 100px;
-    height: 100px;
-    margin: 5px;
-    border-radius: 5px;
-}
+
+
 .div_header{
     display: flex;
     justify-content: center;
@@ -61,11 +81,13 @@ h2{
 }
 footer{
     background-color: red;
-     display: flex;
+    display: flex;
     justify-content: center;
     flex-direction: center;
 }
-
+.texto-participantes{
+    font-size: 200%;
+}
 section{
     background-image: url(./imagens/imagem-fundo-info.jpg);
     height: 768px;
@@ -74,8 +96,51 @@ section{
     background-size: cover;
 }
 h3{
-    color: rgb(255, 255, 255);
+    border-width: 150px;
+    margin-top: 30px;
+    margin-left: 100px;
 }
 .texto-sobre{
     color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    align-items: left;
+    padding: 0px 150px 0px 150px;
+}
+button{
+  border-radius: 10px;
+  background-color: rgb(255, 0, 0);
+  color: white;
+  border-color: rgb(255, 0, 0);
+  margin: 5px;
+}
+
+ span{
+    color: white;
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    align-items: left;
+    border-width: 150px;
+    margin-top: 30px;
+    margin-left: 100px;
+}
+p{
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    align-items: left;
+    border-width: 150px;
+    margin-top: 30px;
+    margin-left: 100px;
+}
+.imagem-sobre{
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    align-items: left;
+    border-width: 150px;
+    margin-top: 30px;
+    margin-left: 100px;
 }
